--- a/group-8/sources/OpenDaVINCI-msv/apps/lanedetector/CMakeLists.txt
+++ b/group-8/sources/OpenDaVINCI-msv/apps/lanedetector/CMakeLists.txt
@@ -22,11 +22,11 @@ IF("${PANDABOARD}" STREQUAL "YES")
     SET (CMAKE_C_FLAGS "-pipe -ansi -D PANDABOARD=1")
     SET (CMAKE_CXX_FLAGS "-pipe -ansi -D PANDABOARD=1")
 
-    INCLUDE_DIRECTORIES (/opt/PandaBoard-SD/usr/include)
-    LINK_DIRECTORIES (/opt/PandaBoard/lib /opt/PandaBoard-SD/usr/lib /opt/PandaBoard-SD/usr/lib/arm-linux-gnueabi /opt/PandaBoard-SD/usr/lib/lapack /opt/PandaBoard-SD/usr/lib/libblas)
+    INCLUDE_DIRECTORIES (/opt/PandaBoard-SD/usr/include /opt/PandaBoard-SD/usr/local/include)
+    LINK_DIRECTORIES (/opt/PandaBoard-SD/lib /opt/PandaBoard-SD/lib/arm-linux-gnueabihf /opt/PandaBoard-SD/usr/lib /opt/PandaBoard-SD/usr/lib/arm-linux-gnueabihf /opt/PandaBoard-SD/usr/lib/arm-linux-gnueabi /opt/PandaBoard-SD/usr/lib/lapack /opt/PandaBoard-SD/usr/lib/libblas /opt/PandaBoard-SD/usr/local/lib)
 
     SET (LIBS ${LIBS} glib-2.0)
-    SET (CMAKE_EXE_LINKER_FLAGS "-Wl,-rpath-link=/opt/PandaBoard-SD/lib:/opt/PandaBoard-SD/usr/lib:/opt/PandaBoard-SD/lib/arm-linux-gnueabi:/opt/PandaBoard-SD/usr/lib/arm-linux-gnueabi")
+    SET (CMAKE_EXE_LINKER_FLAGS "-Wl,-rpath-link=/opt/PandaBoard-SD/lib:/opt/PandaBoard-SD/lib/arm-linux-gnueabihf:/opt/PandaBoard-SD/usr/lib:/opt/PandaBoard-SD/lib/arm-linux-gnueabihf:/opt/PandaBoard-SD/usr/lib/arm-linux-gnueabihf:/opt/PandaBoard-SD/usr/lib:/opt/PandaBoard-SD/lib/arm-linux-gnueabi:/opt/PandaBoard-SD/usr/lib/arm-linux-gnueabi")
 ENDIF("${PANDABOARD}" STREQUAL "YES")
 
 # Recipe for building "lanedetector".
