--- a/group-8/sources/OpenDaVINCI-msv/apps/proxy/CMakeLists.txt
+++ b/group-8/sources/OpenDaVINCI-msv/apps/proxy/CMakeLists.txt
@@ -24,12 +24,27 @@ ENDIF("${PANDABOARD}" STREQUAL "YES")
 INCLUDE_DIRECTORIES (${libopendavinci_SOURCE_DIR}/include)
 INCLUDE_DIRECTORIES (${libdata_SOURCE_DIR}/include)
 INCLUDE_DIRECTORIES (include)
+ 
+#include serial library 
+INCLUDE_DIRECTORIES (serial/include)
+
+set(serial_SRCS serial/src/serial.cc serial/include/serial/serial.h serial/include/serial/v8stdint.h)
+if(UNIX)
+    list(APPEND serial_SRCS serial/src/impl/unix.cc)
+else()
+    list(APPEND serial_SRCS serial/src/impl/win.cc)
+endif()
+## Add serial library
+add_library(serial ${serial_SRCS})
+if(UNIX AND NOT APPLE)
+    target_link_libraries(serial rt)
+endif()
 
 # Recipe for building "proxy".
 FILE(GLOB_RECURSE proxy-sources "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
 ADD_LIBRARY (proxylib STATIC ${proxy-sources})
 ADD_EXECUTABLE (proxy "${CMAKE_CURRENT_SOURCE_DIR}/apps/MainModule.cpp")
-TARGET_LINK_LIBRARIES (proxy proxylib ${DATA_LIBS} ${OPENDAVINCI_LIBS} ${LIBS} ${OpenCV_LIBS} ${THIRDPARTY_LIBS}) 
+TARGET_LINK_LIBRARIES (proxy proxylib ${DATA_LIBS} ${OPENDAVINCI_LIBS} ${LIBS} ${OpenCV_LIBS} serial) 
 
 # Recipe for installing "proxy".
 INSTALL(TARGETS proxy RUNTIME DESTINATION bin) 
@@ -46,7 +61,7 @@ IF(CXXTEST_FOUND)
         LIST(GET testsuite-list "${lastItem}" testsuite-short)
 
         CXXTEST_ADD_TEST(${testsuite-short}-TestSuite ${testsuite-short}-TestSuite.cpp ${testsuite})
-        TARGET_LINK_LIBRARIES(${testsuite-short}-TestSuite proxylib ${DATA_LIBS} ${OPENDAVINCI_LIBS} ${LIBS} ${OpenCV_LIBS} ${THIRDPARTY_LIBS})
+        TARGET_LINK_LIBRARIES(${testsuite-short}-TestSuite proxylib ${DATA_LIBS} ${OPENDAVINCI_LIBS} ${LIBS} ${OpenCV_LIBS} serial)
     ENDFOREACH()
 ENDIF(CXXTEST_FOUND)
 
