--- a/group-6/OpenDaVINCI-msv/apps/driver/CMakeLists.txt
+++ b/group-6/OpenDaVINCI-msv/apps/driver/CMakeLists.txt
@@ -12,7 +12,7 @@ INCLUDE_DIRECTORIES (${libdata_SOURCE_DIR}/include)
 INCLUDE_DIRECTORIES (include)
 
 # Recipe for building "driver".
-FILE(GLOB_RECURSE driver-sources "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
+FILE(GLOB_RECURSE driver-sources "${CMAKE_CURRENT_SOURCE_DIR}/src/Driver.cpp")
 ADD_LIBRARY (driverlib STATIC ${driver-sources})
 ADD_EXECUTABLE (driver "${CMAKE_CURRENT_SOURCE_DIR}/apps/MainModule.cpp")
 TARGET_LINK_LIBRARIES (driver driverlib ${DATA_LIBS} ${OPENDAVINCI_LIBS} ${LIBS}) 
